--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+@font-face {
+  font-family: IBMPlexMono;
+  src: url(IBMPlexMono-Bold.ttf);
+}
 html {
     height: 100%;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: IBMPlexMono,Arial, Helvetica, sans-serif;
     background-color: #303030;
     color: white;
   }
@@ -28,6 +32,7 @@ html {
     font-weight: bold;
     box-shadow: 0px 0px 50px 10px rgb(255, 255, 255, 0.5);
     transition-duration: 1s;
+    font-family: IBMPlexMono;
   }
   .pet:hover {
     width: 110px;
@@ -51,10 +56,32 @@ html {
   }
   .title {
     transition-duration: 1s;
+    text-align: center;
   }
   .title:hover {
     letter-spacing: 10px;
     transition-duration: 1s;
     color: #85ff87;
     text-shadow: 0px 0px 20px  rgb(0, 255, 17);
+  }
+  .footer {
+    width: 100%;
+    height: fit-content;
+    bottom: 0;
+    position: fixed;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+
+  }
+  .creditscs {
+    font-size: 8.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: aqua;
   }
